More findbugs cleanup